--- a/aoc2025.cabal
+++ b/aoc2025.cabal
@@ -23,3 +23,7 @@ executable day02
 executable day03
     import:           shared
     main-is:          Day03.hs
+
+executable day04
+    import:           shared
+    main-is:          Day04.hs
