--- a/aoc2025.cabal
+++ b/aoc2025.cabal
@@ -27,3 +27,8 @@ executable day03
 executable day04
     import:           shared
     main-is:          Day04.hs
+
+executable day05
+    import:           shared
+    main-is:          Day05.hs
+    build-depends:    split
